[package]
name = "kOMB"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "kOMB"
crate-type = ["cdylib"]

[profile.release]
debug=true
strip=false

[dependencies]
pyo3 = "0.27.1"
rand = "0.9.2"
num = "0.4.3"
statrs = "0.18.0"
bit-set = "0.8"
itertools = "0.12"
log = "0.4.29"
pyo3-log = "0.13.2"